sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:9: error: not found: value i
    if (isSmaller(i+1,i)){
                  ^AlgGnomeSort:9: error: not found: value i
    if (isSmaller(i+1,i)){
                      ^